<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:orderingFromXml="true"
        android:title="@string/pref_category_catalog">
        <Preference
            android:key="settingCatalogLocation"
            android:summary="@string/pref_setting_catalog_summary"
            android:title="@string/pref_setting_catalog"/>
        <ListPreference
            android:entries="@array/pref_setting_encoding_keys"
            android:entryValues="@array/pref_setting_encoding_values"
            android:key="settingCatalogEncoding"
            android:summary="@string/pref_setting_encoding_summary"
            android:title="@string/pref_setting_encoding"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="settingRemoveBadChars"
            android:summary="@string/pref_setting_remove_bad_chars_summary"
            android:title="@string/pref_setting_remove_bad_chars"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:orderingFromXml="true"
        android:title="@string/pref_category_list">
        <Preference
            android:key="settingMoviesListLines"
            android:summary="@string/pref_setting_list_lines_summary"
            android:title="@string/pref_setting_list_lines">
        </Preference>
        <EditTextPreference
            android:key="settingMoviesListSeparator"
            android:title="@string/pref_setting_list_separator"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="settingListForceSortField"
            android:summary="@string/pref_setting_list_force_sort_field_summary"
            android:title="@string/pref_setting_list_force_sort_field"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="settingShowThumbs"
            android:summary="@string/pref_setting_show_thumbs_summary"
            android:title="@string/pref_setting_show_thumbs"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:orderingFromXml="true"
        android:title="@string/pref_category_display">
        <EditTextPreference
            android:key="settingMultivalueSeparator"
            android:title="@string/pref_setting_multivalue"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="settingFitPicture"
            android:summary="@string/pref_setting_fit_picture_summary"
            android:title="@string/pref_setting_fit_picture"/>
    </PreferenceCategory>
</PreferenceScreen>
