<!--todo: refactor-->
<!--todo: put correct icons-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_search"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="ifRoom|collapseActionView|withText"
        android:actionViewClass="android.widget.SearchView"/>
    <item
        android:id="@+id/menu_add_filter"
        android:title="@string/menu_add_filter"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="ifRoom|withText"></item>
    <item
        android:id="@+id/submenu_sort"
        android:title="@string/menu_sort_title"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="ifRoom|withText">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_sort_formattedtitle_asc"
                    android:title="@string/menu_sort_formattedtitle_asc"/>
                <item
                    android:id="@+id/menu_sort_formattedtitle_desc"
                    android:title="@string/menu_sort_formattedtitle_desc"/>
                <item
                    android:id="@+id/menu_sort_number_desc"
                    android:title="@string/menu_sort_number_desc"/>
                <item
                    android:id="@+id/menu_sort_number_asc"
                    android:title="@string/menu_sort_number_asc"/>
                <item
                    android:id="@+id/menu_sort_rating_desc"
                    android:title="@string/menu_sort_rating_desc"/>
                <item
                    android:id="@+id/menu_sort_rating_asc"
                    android:title="@string/menu_sort_rating_asc"/>
                <item
                    android:id="@+id/menu_sort_userrating_desc"
                    android:title="@string/menu_sort_userrating_desc"/>
                <item
                    android:id="@+id/menu_sort_userrating_asc"
                    android:title="@string/menu_sort_userrating_asc"/>
                <item
                    android:id="@+id/menu_sort_medialabel_asc"
                    android:title="@string/menu_sort_medialabel_asc"/>
                <item
                    android:id="@+id/menu_sort_medialabel_desc"
                    android:title="@string/menu_sort_medialabel_desc"/>
                <item
                    android:id="@+id/menu_sort_length_desc"
                    android:title="@string/menu_sort_length_desc"/>
                <item
                    android:id="@+id/menu_sort_length_asc"
                    android:title="@string/menu_sort_length_asc"/>
                <item
                    android:id="@+id/menu_sort_year_desc"
                    android:title="@string/menu_sort_year_desc"/>
                <item
                    android:id="@+id/menu_sort_year_asc"
                    android:title="@string/menu_sort_year_asc"/>
                <item
                    android:id="@+id/menu_sort_certification_asc"
                    android:title="@string/menu_sort_certification_asc"/>
                <item
                    android:id="@+id/menu_sort_certification_desc"
                    android:title="@string/menu_sort_certification_desc"/>
                <item
                    android:id="@+id/menu_sort_date_desc"
                    android:title="@string/menu_sort_date_desc"/>
                <item
                    android:id="@+id/menu_sort_date_asc"
                    android:title="@string/menu_sort_date_asc"/>
                <item
                    android:id="@+id/menu_sort_datewatched_desc"
                    android:title="@string/menu_sort_datewatched_desc"/>
                <item
                    android:id="@+id/menu_sort_datewatched_asc"
                    android:title="@string/menu_sort_datewatched_asc"/>
                <item
                    android:id="@+id/menu_sort_borrower_asc"
                    android:title="@string/menu_sort_borrower_asc"/>
                <item
                    android:id="@+id/menu_sort_borrower_desc"
                    android:title="@string/menu_sort_borrower_desc"/>
                <item
                    android:id="@+id/menu_sort_color_tag_desc"
                    android:title="@string/menu_sort_color_tag_desc"/>
                <item
                    android:id="@+id/menu_sort_color_tag_asc"
                    android:title="@string/menu_sort_color_tag_asc"/>
                <item
                    android:id="@+id/menu_sort_originaltitle_asc"
                    android:title="@string/menu_sort_originaltitle_asc"/>
                <item
                    android:id="@+id/menu_sort_originaltitle_desc"
                    android:title="@string/menu_sort_originaltitle_desc"/>
                <item
                    android:id="@+id/menu_sort_translatedtitle_asc"
                    android:title="@string/menu_sort_translatedtitle_asc"/>
                <item
                    android:id="@+id/menu_sort_translatedtitle_desc"
                    android:title="@string/menu_sort_translatedtitle_desc"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:showAsAction="never"></item>
    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about"
        android:showAsAction="never"></item>
</menu>