<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MoviesListActivity"
    style="@android:style/Widget.Holo.ListView"
    android:layout_height="64dip"
    android:layout_width="match_parent"
    android:paddingLeft="6dip"
    android:paddingRight="6dip"
    android:background="@android:drawable/list_selector_background">

    <ImageView
        android:id="@+id/imageCover"
        android:contentDescription="@string/details_img_description"
        android:layout_height="64dip"
        android:layout_width="46dip"
        android:src="@drawable/movie_thumb_stub"
        android:layout_marginRight="4dp"
        android:scaleType="centerCrop"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:background="@android:color/black"/>

    <TextView
        android:id="@+id/movieColorTag"
        android:layout_width="4dip"
        android:layout_height="56dip"
        android:layout_toRightOf="@+id/imageCover"
        android:layout_marginRight="4dip"
        android:layout_centerVertical="true"/>

    <TextView
        android:id="@+id/movieTitle"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/list_holder_row1"
        style="@android:style/TextAppearance.Holo.Medium"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:layout_toRightOf="@id/movieColorTag"/>

    <TextView
        android:id="@+id/movieShortDescription"
        android:layout_below="@id/movieTitle"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/list_holder_row2"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:layout_toRightOf="@id/movieColorTag"/>

    <TextView
        android:id="@+id/movieShortDescription2"
        android:layout_below="@id/movieShortDescription"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/list_holder_row3"
        android:ellipsize="marquee"
        android:singleLine="true"
        android:layout_marginBottom="2dip"
        android:layout_toRightOf="@id/movieColorTag"/>
</RelativeLayout>