<?xml version="1.0" encoding="utf-8"?>

<!--
This file is part of Pocket AMC Reader.
Copyright © 2010-2020 Elman <holdingscythe@zoznam.sk>

Pocket AMC Reader is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

Pocket AMC Reader is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with Pocket AMC Reader.  If not, see <http://www.gnu.org/licenses/>.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/mediaTitle"
        style="@style/SectionTitle"
        android:text="@string/details_section_media" />

    <TableLayout
        android:id="@+id/mediaBoxTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/wrapper_spacing_block"
        android:shrinkColumns="1"
        android:stretchColumns="1">

        <TableRow
            android:id="@+id/MediaLabelLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <TextView
                style="@style/Label.Table"
                android:text="@string/details_medialabel_label" />

            <TextView
                android:id="@+id/MediaLabel"
                style="@style/RegularText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ph_text_line" />

        </TableRow>

        <TableRow
            android:id="@+id/MediaTypeLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <TextView
                style="@style/Label.Table"
                android:text="@string/details_mediatype_label" />

            <TextView
                android:id="@+id/MediaType"
                style="@style/RegularText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ph_text_line" />

        </TableRow>

        <TableRow
            android:id="@+id/SourceLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <TextView
                style="@style/Label.Table"
                android:text="@string/details_source_label" />

            <TextView
                android:id="@+id/Source"
                style="@style/RegularText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ph_text_line" />

        </TableRow>

        <TableRow
            android:id="@+id/BorrowerLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <TextView
                style="@style/Label.Table"
                android:text="@string/details_borrower_label" />

            <TextView
                android:id="@+id/Borrower"
                style="@style/RegularText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ph_text_line" />

        </TableRow>

        <TableRow
            android:id="@+id/DateLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <TextView
                style="@style/Label.Table"
                android:text="@string/details_date_label" />

            <TextView
                android:id="@+id/Date"
                style="@style/RegularText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ph_text_line" />

        </TableRow>

        <TableRow
            android:id="@+id/DateWatchedLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <TextView
                style="@style/Label.Table"
                android:text="@string/details_datewatched_label" />

            <TextView
                android:id="@+id/DateWatched"
                style="@style/RegularText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ph_text_line" />

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:id="@+id/mediaLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/wrapper_spacing_block">

        <TextView
            android:id="@+id/OriginalTitleLabel"
            style="@style/Label"
            android:text="@string/details_originaltitle_label" />

        <TextView
            android:id="@+id/OriginalTitle"
            style="@style/RegularText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/wrapper_spacing_block"
            android:text="@string/ph_text_short" />

        <TextView
            android:id="@+id/TranslatedTitleLabel"
            style="@style/Label"
            android:text="@string/details_translatedtitle_label" />

        <TextView
            android:id="@+id/TranslatedTitle"
            style="@style/RegularText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/wrapper_spacing_block"
            android:text="@string/ph_text_short" />

    </LinearLayout>

</LinearLayout>
